@@ -6,7 +6,6 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import ru.practicum.shareit.item.dto.ItemDto;
@@ -17,10 +16,12 @@ import ru.practicum.shareit.request.service.RequestService;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 
@@ -49,17 +50,17 @@ class ItemRequestControllerTestIT {
 				.created("2024-01-01T10:10:10")
 				.items(list).build();
 
-		when(requestService.addRequest(itemRequestCreateDto, 1L)).thenReturn(expectedRequest);
+		when(requestService.addRequest(any(), anyLong())).thenReturn(expectedRequest);
 
-		String result = mockMvc.perform(post("/requests")
+		mockMvc.perform(post("/requests")
 						.header(X_SHARER_USER_ID, 1L)
 						.contentType(MediaType.APPLICATION_JSON)
 						.content(objectMapper.writeValueAsString(itemRequestCreateDto)))
 				.andExpect(status().is2xxSuccessful())
-				.andReturn()
-				.getResponse()
-				.getContentAsString();
-		assertEquals(objectMapper.writeValueAsString(expectedRequest), result);
+				.andExpect(jsonPath("$.id").value(1))
+				.andExpect(jsonPath("$.description").value("description"))
+				.andExpect(jsonPath("$.created").value("2024-01-01T10:10:10"))
+				.andExpect(jsonPath("$.items").isEmpty());
 	}
 
 	@SneakyThrows
@@ -79,34 +80,30 @@ class ItemRequestControllerTestIT {
 	@Test
 	void getRequests_whenInvoked_thenReturnStatusOkWithEmptyListInBody() {
 		long userId = 1L;
-		List<ItemRequestResponseDto> expectedList = Collections.emptyList();
-		when(requestService.getRequests(userId)).thenReturn(expectedList);
-		String result = mockMvc.perform(get("/requests")
+		List<ItemRequestResponseDto> expectedList = List.of(ItemRequestResponseDto.builder().id(1L).description("desc").build());
+		when(requestService.getRequests(anyLong())).thenReturn(expectedList);
+		mockMvc.perform(get("/requests")
 						.header(X_SHARER_USER_ID, userId)
 						.contentType(MediaType.APPLICATION_JSON)
 						.content(objectMapper.writeValueAsString("")))
 				.andExpect(status().isOk())
-				.andReturn()
-				.getResponse()
-				.getContentAsString();
-		assertEquals(objectMapper.writeValueAsString(expectedList), result);
+				.andExpect(jsonPath("$[0].id").value(1))
+				.andExpect(jsonPath("$[0].description").value("desc"));
 	}
 
 	@SneakyThrows
 	@Test
 	void getOtherRequests_whenPageParamsValid_thenReturnStatusOkWithEmptyListInBody() {
 		long userId = 1L;
-		List<ItemRequestResponseDto> expectedList = Collections.emptyList();
-		when(requestService.getOtherRequests(userId, PageRequest.of(1, 1))).thenReturn(expectedList);
-		String result = mockMvc.perform(get("/requests")
+		List<ItemRequestResponseDto> expectedList = List.of(ItemRequestResponseDto.builder()
+				.id(1L).description("desc").build());
+		when(requestService.getOtherRequests(anyLong(), any())).thenReturn(expectedList);
+		mockMvc.perform(get("/requests/all")
 						.header(X_SHARER_USER_ID, userId)
-						.contentType(MediaType.APPLICATION_JSON)
-						.content(objectMapper.writeValueAsString(expectedList)))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk())
-				.andReturn()
-				.getResponse()
-				.getContentAsString();
-		assertEquals(objectMapper.writeValueAsString(expectedList), result);
+				.andExpect(jsonPath("$[0].id").value(1))
+				.andExpect(jsonPath("$[0].description").value("desc"));
 	}
 
 	@SneakyThrows
@@ -135,17 +132,16 @@ class ItemRequestControllerTestIT {
 				.created("2024-01-01T10:10:10")
 				.items(list).build();
 
-		when(requestService.getRequestById(userId, requestId)).thenReturn(expectedItemRequest);
+		when(requestService.getRequestById(anyLong(), anyLong())).thenReturn(expectedItemRequest);
 
-		String result = mockMvc.perform(get("/requests/{requestId}", requestId)
+		mockMvc.perform(get("/requests/{requestId}", requestId)
 						.header(X_SHARER_USER_ID, userId)
 						.contentType(MediaType.APPLICATION_JSON)
 						.content(objectMapper.writeValueAsString(expectedItemRequest)))
 				.andExpect(status().isOk())
-				.andReturn()
-				.getResponse()
-				.getContentAsString();
-
-		assertEquals(objectMapper.writeValueAsString(expectedItemRequest), result);
+				.andExpect(jsonPath("$.id").value(1))
+				.andExpect(jsonPath("$.description").value("description"))
+				.andExpect(jsonPath("$.created").value("2024-01-01T10:10:10"))
+				.andExpect(jsonPath("$.items").isEmpty());
 	}
 }
